test_suite5/ALAN/test_suite/alan-2022-examples/failing/006410_mutation.alan
source zlqia begin leave 50 X := 4 > 86547 end
